testdata/baselines/reference/submodule/conformance/moduleExportAssignment4.errors.txt
async.js(1,9): error TS2339: Property 'default' does not exist on type 'typeof import("async")'.
async.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== async.js (2 errors) ====
    exports.default = { m: 1, a: 1 }
            ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type 'typeof import("async")'.
    module.exports = exports['default'];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    